--- a/usbSerialExamples/src/main/res/xml/device_filter.xml
+++ b/usbSerialExamples/src/main/res/xml/device_filter.xml
@@ -17,4 +17,7 @@
     
     <!-- 0x067B / 0x2303: Prolific PL2303 -->
     <usb-device vendor-id="1659" product-id="8963" />
+
+    <!--0x05C6 / 0x9025: Adapt board -->
+    <usb-device vendor-id="1478" product-id="36901" />
 </resources>
